# hackathon-accenture

./: .gitignore  README.md  pyproject.toml
hackaton/: __main__.py
hackaton/backend/: model.py
hackaton/data/: llm.txt  modelos_lenguaje.txt  plan_accion_ia.txt  politica_nacional_ia.txt  reglamento_ue.txt
hackaton/frontend/: components.py
hackaton/utils/: constants.py  environment.py
